WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275770
[WebXR] MTLRasterizationRateLayerDescriptor instances are leaked after WebXR immersive session
https://bugs.webkit.org/show_bug.cgi?id=275770
Summary
[WebXR] MTLRasterizationRateLayerDescriptor instances are leaked after WebXR ...
Ada Chan
Reported
2024-06-21 23:02:19 PDT
[WebXR] MTLRasterizationRateLayerDescriptor instances are leaked after WebXR immersive session
Attachments
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2024-06-21 23:02:22 PDT
<
rdar://problem/130319220
>
Ada Chan
Comment 2
2024-06-21 23:11:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30078
EWS
Comment 3
2024-06-22 13:21:23 PDT
Committed
280281@main
(77aa2ac82dd0): <
https://commits.webkit.org/280281@main
> Reviewed commits have been landed. Closing PR #30078 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug