[WebXR] MTLRasterizationRateLayerDescriptor instances are leaked after WebXR immersive session https://bugs.webkit.org/show_bug.cgi?id=275770 rdar://130319220

Reviewed by Mike Wyrzykowski.

Use adoptNS() to fix the leaks.

* Source/WebCore/platform/graphics/cocoa/ANGLEUtilitiesCocoa.mm:
(WebCore::newRasterizationRateMap):

Canonical link: https://commits.webkit.org/280281@main